# SyntheticDataCopulas

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml  requirements.txt  setup.py
datasets/: datasaurus_data.csv
src/: synthetic_data_generator.py
src/non_parametric/: __init__.py  empirical_cumulative_distribution.py  frequency_table.py  plot_comparision.py  synthetic_data_generator.py
src/utilities/: empirical_cumulative_distribution.py  frequency_table.py  plot_comparision.py
tests/: test_shapes.py
