[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "non-parametric-multivariate-data-generator"
version = "0.0.2"
authors = [
  { name="Juan P. Restrepo", email="jurest82@eafit.edu.co" },
  { name="Pablo Osorio", email="osoriopabl@gmail.com" },
]
description = "A small example package"
readme = "../README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers=[
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas>=1.3.5", "matplotlib>=3.2.2", "numpy>=1.21.6"
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=3.2.1",
    "openpyxl==3.0.10",
    "pre-commit>=3.3",
    "pytest>=7.0",
    "seaborn==0.11.2",
    "twine>=4.0.2",
]


[project.urls]
"Homepage" = "https://github.com/jurest82/SyntheticDataCopulas"
